# VFCheeser

./: Cargo.toml
src/: macro_assist.rs  main.rs  parse.rs  text_command.rs
src/macro_assist/: count.rs  filter_params.rs  is_type.rs  populate_impl.rs  wrap.rs
src/parse/: maybe_option_parse.rs  maybe_parse.rs
src/text_command/: argument_parser.rs  error.rs  main_macro.rs  parse_argument.rs  text_args.rs  text_command_arg_iter.rs
