[package]
name = "voiceforge_cheeser"
version = "0.1.0"
authors = ["Paul C <paul.luap09@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.2.2"